--- a/public/scss/_responsive_design.scss
+++ b/public/scss/_responsive_design.scss
@@ -2,7 +2,7 @@
     .alert {
         .pict {
             img {
-                width: 100%;
+                width: 40%;
             }
         }
     }
@@ -25,6 +25,15 @@
         padding-top: 1rem;
         align-items: flex-start;
     }
+
+    .alert {
+        .pict {
+            img {
+                width: 100%;
+            }
+        }
+    }
+
     header {
         @include all-center;
         flex-direction: column;
@@ -39,7 +48,8 @@
             margin-top: .8rem;
             font-size: 14px;
         } .service {
-            font-size: 8px;
+            font-size: 9px;
+            letter-spacing: 4px;
             line-height: 16px;
         }
     }
